v0.10
	* ADD : configurable zoom factors (only for "None" background for now)
	* ADD : Background tiles caching
	* ADD : Initial track to road
	* ADD : Initial osmarender rendering
	* FIX : decrease memory usage when importing OSM
	* FIX : increase snap update speed
	* ADD : ability to load tracks from the command line (by Daniel van Gerpen)
	* ADD : Mapnik-lookalike style (by Colin Marquardt and Andreas Laas)
	* ADD : ability to set default style at startup
	* FIX : Remove compile warnings and c-style casts (by Daniel van Gerpen)
	* ADD : "created_by" to new features
	* ADD : navigation: view -> bookmark + add/remove
	* FIX : warn when OSM userid/password not set
	* ADD : Export viewport to OSM
	* FIX : crash when splitting roads (by Daniel van Gerpen)
	* FIX : various memory leaks and clean ups (by Daniel van Gerpen)
	* ADD : provide navigation for the slippy map with right and left mouse button (by Daniel van Gerpen)
	* FIX : zoom around cursor position
	* ADD : import NMEA logs (crude) (by Chris Browet)
	* FIX : proper handling of dirty documents (by Chris Browet)
	* ADD : search on name/tags (by Chris Browet)
	* FIX : don't crash while createing a roundabout (by Tommi Vainikiainen)
	* ADD : curved road support
	* FIX : enhance somewhat visibility of selected items (by Chris Browet)
	* ADD : export OSM files (by Chris Browet)
	* ADD : support for OSM backgrounds (by Chris Browet)
	* ADD : centralized preferences dialog (by Chris Browet)
	* ADD : support for WMS maps (by Chris Browet)
	* FIX : remove yahoo maps support (not "legal" way to access tiles) (by Chris Browet)
	* ADD : support for Yahoo maps backgrounds (by Chris Browet; QMapControl widget by Kai Winter)
	* ADD : tags autocompletion in related widgets
	* ADD : paint style editor

v0.09
	* ADD : support for Noni GPSPlot tracks
	* ADD : draw natural=wood areas (by Raphael Studer)
	* FIX : also draw trackpoints that have an icon
	* FIX : draw unconnected trackpoints
	* ADD : multiple remove