@@ -28,7 +28,7 @@
         <enum>QTabWidget::North</enum>
        </property>
        <property name="currentIndex" >
-        <number>0</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="tab_4" >
         <attribute name="title" >
@@ -82,6 +82,25 @@
                </widget>
               </item>
              </layout>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="groupBox_5" >
+           <property name="title" >
+            <string>Projection</string>
+           </property>
+           <layout class="QHBoxLayout" >
+            <item>
+             <widget class="QLabel" name="label_7" >
+              <property name="text" >
+               <string>Select Projection</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="cbProjection" />
             </item>
            </layout>
           </widget>
