@@ -149,10 +149,10 @@ void LayerManager::setView(const QList<QPointF> coordinates)
 		//QCoreApplication::processEvents();
 	}
 
-// 	if (getLayer()->getMapAdapter()->getAdaptedZoom() > getLayer()->getMapAdapter()->getAdaptedMinZoom()) {
-// 		setMiddle(coordinates);
-// 		backZoomOut();
-// 	}
+	if (getLayer()->getMapAdapter()->getAdaptedZoom() > getLayer()->getMapAdapter()->getAdaptedMinZoom()) {
+		setMiddle(coordinates);
+		backZoomOut();
+	}
 
 	//if ((!containsAll(coordinates)) && (getLayer()->getMapAdapter()->getZoom() > getLayer()->getMapAdapter()->getAdaptedMinZoom()))
 	//{
